Archive2/bc/e457857c250621/output
main.cpp:10:35: error: unknown type name 'C'
    bar(const foo<R, C>& = foo<R, C>()) {}
                                  ^
main.cpp:10:36: error: expected ')'
    bar(const foo<R, C>& = foo<R, C>()) {}
                                   ^
main.cpp:10:8: note: to match this '('
    bar(const foo<R, C>& = foo<R, C>()) {}
       ^
main.cpp:10:33: error: expected '>'
    bar(const foo<R, C>& = foo<R, C>()) {}
                                ^
3 errors generated.
